build/js/components/requirejs/tests/error/c.js
define(["a"],function(e){return{name:"c",a:e}});